--- a/TripGuide/Scenes/Settings/MyBlog/WritingBlog/WritingBlog.storyboard
+++ b/TripGuide/Scenes/Settings/MyBlog/WritingBlog/WritingBlog.storyboard
@@ -24,40 +24,72 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter header" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IRH-RO-pIB">
-                                <rect key="frame" x="10" y="108" width="373" height="25.666666666666657"/>
-                                <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="24"/>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Enter header" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IRH-RO-pIB">
+                                <rect key="frame" x="10" y="113" width="393" height="36"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="OvU-Ug-GKZ"/>
+                                </constraints>
+                                <color key="textColor" systemColor="systemOrangeColor"/>
+                                <fontDescription key="fontDescription" name="Gilroy-Bold" family="Gilroy-Bold" pointSize="27"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <connections>
                                     <action selector="enterHeader:" destination="14y-Aq-coG" eventType="editingDidEnd" id="gfy-VZ-jJJ"/>
                                     <action selector="header:" destination="14y-Aq-coG" eventType="editingDidEnd" id="bDw-Zq-DXj"/>
                                 </connections>
                             </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gq4-CD-MaA">
-                                <rect key="frame" x="0.0" y="133.66666666666669" width="393" height="684.33333333333326"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor"/>
-                                <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="19"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Your blog journey begins here 😍" translatesAutoresizingMaskIntoConstraints="NO" id="gq4-CD-MaA">
+                                <rect key="frame" x="0.0" y="149" width="393" height="470"/>
+                                <color key="backgroundColor" systemColor="labelColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="470" id="LaB-bG-Ik4"/>
+                                    <constraint firstAttribute="width" constant="393" id="iiY-7p-fSV"/>
+                                </constraints>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="Gilroy-Regular" family="Gilroy-Regular" pointSize="21"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="80" translatesAutoresizingMaskIntoConstraints="NO" id="TGy-Qd-rJh">
+                                <rect key="frame" x="10" y="629" width="373" height="34.333333333333371"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xgU-e4-bEq">
+                                        <rect key="frame" x="0.0" y="0.0" width="146.66666666666666" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Clear all"/>
+                                        <connections>
+                                            <action selector="didTapClearALl:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="mRL-w9-bvv"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EkN-K8-vJw">
+                                        <rect key="frame" x="226.66666666666663" y="0.0" width="146.33333333333337" height="34.333333333333336"/>
+                                        <state key="normal" title="Button"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="Save"/>
+                                        <connections>
+                                            <action selector="didTapSave:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="47s-eZ-fP5"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" systemColor="labelColor"/>
                         <constraints>
-                            <constraint firstItem="gq4-CD-MaA" firstAttribute="top" secondItem="IRH-RO-pIB" secondAttribute="bottom" id="4u1-7x-HKN"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="IRH-RO-pIB" secondAttribute="trailing" constant="10" id="5Jx-va-mpZ"/>
-                            <constraint firstItem="IRH-RO-pIB" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="5" id="DXo-se-nZV"/>
-                            <constraint firstItem="gq4-CD-MaA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="IKq-8C-Hdf"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gq4-CD-MaA" secondAttribute="trailing" id="lhe-iq-Una"/>
-                            <constraint firstItem="IRH-RO-pIB" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="pi0-F7-Y13"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="bottom" secondItem="gq4-CD-MaA" secondAttribute="bottom" id="tYI-Fj-1MY"/>
+                            <constraint firstItem="gq4-CD-MaA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="16D-2n-iZQ"/>
+                            <constraint firstItem="gq4-CD-MaA" firstAttribute="top" secondItem="IRH-RO-pIB" secondAttribute="bottom" id="FXl-QV-1Vo"/>
+                            <constraint firstItem="IRH-RO-pIB" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="MBH-cT-jFT"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="TGy-Qd-rJh" secondAttribute="trailing" constant="10" id="McX-RC-6OV"/>
+                            <constraint firstItem="TGy-Qd-rJh" firstAttribute="top" secondItem="gq4-CD-MaA" secondAttribute="bottom" constant="10" id="Tuc-WG-MDQ"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="gq4-CD-MaA" secondAttribute="trailing" id="XhR-0m-9cG"/>
+                            <constraint firstItem="TGy-Qd-rJh" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="10" id="hXz-Sz-Ujh"/>
+                            <constraint firstItem="IRH-RO-pIB" firstAttribute="trailing" secondItem="vDu-zF-Fre" secondAttribute="trailing" constant="10" id="qUO-Vo-sVj"/>
+                            <constraint firstItem="IRH-RO-pIB" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="10" id="tAJ-ca-a60"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="2Xs-bx-TjS"/>
                     <connections>
+                        <outlet property="clearAll" destination="xgU-e4-bEq" id="XP2-oO-gxM"/>
                         <outlet property="content" destination="gq4-CD-MaA" id="vJJ-gI-WLU"/>
                         <outlet property="header" destination="IRH-RO-pIB" id="BJH-Gn-Rgv"/>
+                        <outlet property="save" destination="EkN-K8-vJw" id="sNh-T9-jdk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -88,8 +120,8 @@
         <systemColor name="labelColor">
             <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
